--- a/examples/kubernetes/deployments/postfix.yaml
+++ b/examples/kubernetes/deployments/postfix.yaml
@@ -72,12 +72,17 @@ spec:
         volumeMounts:
         - name: mailboxes
           mountPath: /var/vmail
+        - name: spool
+          mountPath: /var/spool/postfix
         - name: certificate
           mountPath: /var/certificate
       volumes:
       - name: mailboxes
         hostPath:
           path: /var/mailserver/mailboxes
+      - name: spool
+        hostPath:
+          path: /var/mailserver/spool
       - name: certificate
         secret:
           secretName: tls-certificate
