--- a/examples/helm-charts/postfix/templates/secret.yaml
+++ b/examples/helm-charts/postfix/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Files.Glob .Values.tlsCertificateFile -}}
+{{- if .Values.tlsCertificate -}}
 apiVersion: v1
 kind: Secret
 type: kubernetes.io/tls
@@ -6,7 +6,7 @@ metadata:
   name: {{ include "postfix.fullname" . }}-certificate
   namespace: {{ .Release.Namespace }}
 data:
-  tls.chain: {{ .Files.Get .Values.tlsCertificateChainFile | b64enc }}
-  tls.crt: {{ .Files.Get .Values.tlsCertificateFile | b64enc }}
-  tls.key: {{ .Files.Get .Values.tlsCertificateKeyFile | b64enc }}
+  tls.chain: {{ .Values.tlsCertificateChain | b64enc }}
+  tls.crt: {{ .Values.tlsCertificate | b64enc }}
+  tls.key: {{ .Values.tlsKey | b64enc }}
 {{- end -}}
