--- a/examples/helm-charts/mariadb/templates/deployment.yaml
+++ b/examples/helm-charts/mariadb/templates/deployment.yaml
@@ -16,6 +16,9 @@ spec:
     metadata:
       labels:
         {{- include "mariadb.selectorLabels" . | nindent 8 }}
+        {{- if .Values.additionalLabels -}}
+          {{- toYaml .Values.additionalLabels | nindent 8 }}
+        {{- end }}
     spec:
       affinity:
         nodeAffinity:
