--- a/examples/helm-charts/postfixadmin/values.yaml
+++ b/examples/helm-charts/postfixadmin/values.yaml
@@ -1,6 +1,8 @@
 # Default values for postfixadmin.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
+nameOverride: ""
+fullnameOverride: ""
 
 # $replicaCount - the number of replicas in the deployment to create
 replicaCount: 1
@@ -11,8 +13,10 @@ replicaCount: 1
 image:
   repository: technicalguru/mailserver-postfixadmin
   pullPolicy: IfNotPresent
-  nameOverride: ""
-  fullnameOverride: ""
+
+# $additionalLabels - additional labels to attach to a pod
+additionalLabels: {}
+#  labelKey: labelValue
 
 #####################
 # Service settings
@@ -27,16 +31,14 @@ resources: {}
 #####################
 # Database settings
 #####################
-# $dbHostname - the database host
-# $dbName     - the database instance name
-# $dbUser     - the database user to use
-# $dbPassword - the password of the database user to use
-# $dbSetupPassword - the root password for setup
+# $dbHostname    - the database host
+# $dbName        - the database instance name
+# $dbUser        - the database user to use
+# $dbPassword    - the password of the database user to use
 dbHostname: "mariadb"
 dbName: "mail"
 dbUser: "postfix"
 dbPassword: "postfix"
-dbSetupPassword: "password"
 
 
 ########################
@@ -44,12 +46,14 @@ dbSetupPassword: "password"
 ########################
 # $mailserverHostname - hostname to be used for HELO greeting
 # $mailserverPort     - relay port for Amavis mail scanning
+# $setupPassword      - the setup password for PostfixAdmin
 # $abuseEmail         - e-mail of abuse admin
 # $hostmasterEmail    - e-mail of host responsible
 # $postmasterEmail    - e-mail of mail responsible
 # $webmasterEmail     - e-mail of web responsible
 mailserverHostname: "postfix"
-mailserverPort: ""
+mailserverPort: "25"
+setupPassword: "password"
 abuseEmail: "abuse@localhost"
 hostmasterEmail: "hostmaster@localhost"
 postmasterEmail: "postmaster@localhost"
