--- a/examples/helm-charts/mariadb/templates/deployment.yaml
+++ b/examples/helm-charts/mariadb/templates/deployment.yaml
@@ -19,6 +19,9 @@ spec:
         {{- if .Values.additionalLabels -}}
           {{- toYaml .Values.additionalLabels | nindent 8 }}
         {{- end }}
+    {{- if .Values.additionalTemplateSpec -}}
+      {{- toYaml .Values.additionalTemplateSpec | nindent 4 }}
+    {{- end }}
     spec:
       affinity:
         nodeAffinity:
@@ -29,6 +32,9 @@ spec:
                 operator: In
                 values:
                 - {{ .Values.environment }}
+      {{- if .Values.additionalPodSpec -}}
+        {{- toYaml .Values.additionalPodSpec | nindent 6 }}
+      {{- end }}
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
@@ -55,6 +61,9 @@ spec:
         - name: configurations
           mountPath: /etc/mysql/conf.d/{{ include "mariadb.fullname" .}}-audit-log.cnf
           subPath: {{ include "mariadb.fullname" .}}-audit-log.cnf
+        {{- end }}
+        {{- if .Values.additionalContainerSpec -}}
+          {{- toYaml .Values.additionalContainerSpec | nindent 8 }}
         {{- end }}
       volumes:
       - name: data
