--- a/examples/helm-charts/mariadb/values.yaml
+++ b/examples/helm-charts/mariadb/values.yaml
@@ -60,3 +60,12 @@ enableAuditLog: true
 # $auditFilePath  - where to store the audit file (default is the data directory in order to persist automatically)
 auditFilePath: "/var/lib/mysql/server_audit.log"
 
+################################################
+# More customization
+################################################
+# $additionalTemplateSpec  - Add more deployment template specification at this value
+# $additionalPodSpec       - Add more pod specification at this value
+# $additionalContainerSpec - Add more container specification at this value
+additionalTemplateSpec: {}
+additionalPodSpec: {}
+additionalContainerSpec: {}
