--- a/examples/helm-charts/roundcube/values.yaml
+++ b/examples/helm-charts/roundcube/values.yaml
@@ -52,3 +52,13 @@ imapServerHostname: "postfix"
 smtpServerHostname: "postfix"
 defaultDomain: "localdomain"
 desKey: ""
+
+###################################
+# More customization
+###################################
+# $additionalTemplateSpec  - Add more deployment template specification at this value
+# $additionalPodSpec       - Add more pod specification at this value
+# $additionalContainerSpec - Add more container specification at this value
+additionalTemplateSpec: {}
+additionalPodSpec: {}
+additionalContainerSpec: {}
