--- a/examples/helm-charts/postfix/values.yaml
+++ b/examples/helm-charts/postfix/values.yaml
@@ -104,3 +104,10 @@ configFiles: {}
 #- name: example2
 #  mountPath: /etc/postfix/x20-example.cf
 #  path: example2.cf
+
+# $additionalTemplateSpec  - Add more deployment template specification at this value
+# $additionalPodSpec       - Add more pod specification at this value
+# $additionalContainerSpec - Add more container specification at this value
+additionalTemplateSpec: {}
+additionalPodSpec: {}
+additionalContainerSpec: {}
