--- a/examples/helm-charts/postfixadmin/values.yaml
+++ b/examples/helm-charts/postfixadmin/values.yaml
@@ -58,3 +58,13 @@ abuseEmail: "abuse@localhost"
 hostmasterEmail: "hostmaster@localhost"
 postmasterEmail: "postmaster@localhost"
 webmasterEmail: "webmaster@localhost"
+
+################################################
+# More customization
+################################################
+# $additionalTemplateSpec  - Add more deployment template specification at this value
+# $additionalPodSpec       - Add more pod specification at this value
+# $additionalContainerSpec - Add more container specification at this value
+additionalTemplateSpec: {}
+additionalPodSpec: {}
+additionalContainerSpec: {}
