--- a/examples/helm-charts/roundcube/templates/deployment.yaml
+++ b/examples/helm-charts/roundcube/templates/deployment.yaml
@@ -17,7 +17,13 @@ spec:
         {{- if .Values.additionalLabels -}}
           {{- toYaml .Values.additionalLabels | nindent 8 }}
         {{- end }}
+    {{- if .Values.additionalTemplateSpec -}}
+      {{- toYaml .Values.additionalTemplateSpec | nindent 4 }}
+    {{- end }}
     spec:
+      {{- if .Values.additionalPodSpec -}}
+        {{- toYaml .Values.additionalPodSpec | nindent 6 }}
+      {{- end }}
       containers:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Chart.AppVersion }}"
@@ -42,6 +48,9 @@ spec:
         ports:
         - name: http
           containerPort: 80
+        {{- if .Values.additionalContainerSpec -}}
+          {{- toYaml .Values.additionalContainerSpec | nindent 8 }}
+        {{- end }}
       resources:
             {{- toYaml .Values.resources | nindent 12 }}
 
