--- a/examples/helm-charts/amavis/templates/deployment.yaml
+++ b/examples/helm-charts/amavis/templates/deployment.yaml
@@ -55,7 +55,7 @@ spec:
 {{- range .Values.configFiles }}
         - name: {{ .name }}
           mountPath: {{ .mountPath }}
-          subPath: {{ base .path }}
+          subPath: {{ base .mountPath }}
 {{- end }}
         {{- if .Values.additionalContainerSpec -}}
           {{- toYaml .Values.additionalContainerSpec | nindent 8 }}
