--- a/examples/helm-charts/postfix/templates/deployment.yaml
+++ b/examples/helm-charts/postfix/templates/deployment.yaml
@@ -60,7 +60,7 @@ spec:
           value: "{{ .Values.amavisPort }}"
 {{- if .Values.tlsCertificate }}
         - name: PF_TLS_CERT_FILE
-          value: "{{ .Values.tlsCertificatePath }}/tls.cert"
+          value: "{{ .Values.tlsCertificatePath }}/tls.crt"
         - name: PF_TLS_KEY_FILE
           value: "{{ .Values.tlsCertificatePath }}/tls.key"
         - name: PF_TLS_CAFILE
