Preparing Release Candidate 1

--- a/examples/helm-charts/mailserver/Chart.yaml
+++ b/examples/helm-charts/mailserver/Chart.yaml
@@ -14,25 +14,25 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 1.0.0
+version: 1.0.0-rc1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: 0.9.0
+appVersion: 1.0.0-rc1
 
 dependencies:
 - name: mariadb
-  version: 1.0.0
+  version: 1.0.0-rc1
   repository: file://../mariadb
 - name: postfix
-  version: 1.0.0
+  version: 1.0.0-rc1
   repository: file://../postfix
 - name: amavis
-  version: 1.0.0
+  version: 1.0.0-rc1
   repository: file://../amavis
 - name: postfixadmin
-  version: 1.0.0
+  version: 1.0.0-rc1
   repository: file://../postfixadmin
 - name: roundcube
-  version: 1.0.0
+  version: 1.0.0-rc1
   repository: file://../roundcube
