--- a/examples/helm-charts/postfixadmin/Chart.yaml
+++ b/examples/helm-charts/postfixadmin/Chart.yaml
@@ -14,9 +14,9 @@ type: application
 
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
-version: 1.0.0
+version: 1.0.0-rc1
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application.
-appVersion: latest
+appVersion: release-3.2.4-01-rc1
 
